# doubleopen-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
.reuse/: dep5
analyze/: Cargo.toml
analyze/src/: lib.rs  package.rs
analyze/src/yocto/: mod.rs  recipe.rs  srclist.rs
cli/: Cargo.toml
cli/src/: main.rs
fossology/: Cargo.toml
fossology/src/: api_objects.rs  lib.rs
notice/: Cargo.toml
notice/src/: lib.rs
policy_engine/: Cargo.toml
policy_engine/src/: evaluation_result.rs  lib.rs  license.rs  policy.rs  policy_file.rs  policy_violation.rs  resolution.rs
spdx/: Cargo.toml
spdx/src/: algorithm.rs  annotation.rs  checksum.rs  creation_info.rs  document_creation_information.rs  doubleopen.rs  external_document_reference.rs  external_package_reference.rs  file_information.rs  file_type.rs  lib.rs  license_list.rs  other_licensing_information_detected.rs  package_information.rs  package_verification_code.rs  relationship.rs  snippet.rs  spdx_expression.rs
src/: commands.rs  doubleopen.rs  lib.rs  main.rs  utilities.rs
src/analyze/: mod.rs  package.rs  yocto.rs
src/analyze/yocto/: manifest_entry.rs  mod.rs  recipe.pest  recipe.rs  runtime_reverse.rs  source_package.rs
src/commands/: fossology.rs  mod.rs
src/fossology/: api_objects.rs  convert_licenses.rs  doubleopen_licenses.rs  fossology.rs  mod.rs  populate_spdx.rs  processors.rs  queries.rs  structs.rs  upload_archives.rs
src/manifest/: manifest.rs  mod.rs  structs.rs
src/package_list/: mod.rs  structs.rs
src/policy_engine/: evaluation_result.rs  license.rs  mod.rs  policy.rs  policy_file.rs  policy_violation.rs  resolution.rs
src/spdx/: checksum.rs  document_creation_information.rs  external_document_reference.rs  file_information.rs  mod.rs  other_licensing_information_detected.rs  package_information.rs  package_verification_code.rs  relationship.rs  spdx.rs  spdx_expression.rs
src/srclist/: mod.rs  srclist.rs  structs.rs
src/utilities/: mod.rs
src/yocto/: manifest.rs  mod.rs  package_list.rs  srclist.rs  yocto.rs
tests/data/fossology/: expected.json  file_input.json  response1.json  response2.json  response3.json  test_spdx.json  updated_file_expected.json
tests/examples/analyze/: acl.srclist.json  mtdev.srclist
tests/examples/notice/: template.hbs
tests/examples/policy_engine/: example_policy.json  example_policy.yml  minimal.spdx.json  policy.yml
tests/examples/spdx/: simple.spdx.json
tests/examples/yocto/: manifest.manifest
tests/examples/yocto/pkgdata/: dbus-wait  dbus-wait.dirents  dbus-wait.filelics  dbus-wait.srclist  dbus-wait.srcuris  mtdev  mtdev.dirents  mtdev.srclist  mtdev.srcuris  xset  xset.dirents  xset.srclist  xset.srcuris
utilities/: Cargo.toml
utilities/src/: lib.rs
