# SPDX-FileCopyrightText: 2020 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "doubleopen_cli"
version = "0.1.8"
authors = ["HH Partners"]
edition = "2018"
description = "A tool for Double Open Project's automation workflow"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fossology-rs = { git = "https://github.com/doubleopen-project/fossology-rs", branch = "main" }
spdx-rs = { git = "https://github.com/doubleopen-project/spdx-rs", branch = "main" }
clap = "3.0.0-beta.2"
env_logger = "0.8"
log = "0.4"
sha2 = "0.9"
hex = "0.4"
regex = "1"