# SPDX-FileCopyrightText: 2020 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "doubleopen_cli"
version = "0.2.2"
authors = ["HH Partners"]
edition = "2018"
description = "A tool for Double Open Project's automation workflow"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fossology-rs = "0.2"
spdx-rs = "0.5"
spdx-toolkit = "0.3"
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
regex = "1"
anyhow = "1"
serde_json = "1"
serde_yaml = "0.8"

[dev-dependencies]
pretty_assertions = "1"
