# SPDX-FileCopyrightText: 2020-2021 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "analyze"
version = "0.1.0"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fossology = { path = "../fossology" }
spdx = { path = "../spdx" }
utilities = { path = "../utilities" }
thiserror = "1.0"
log = "0.4"
rayon = "1.5"
flate2 = "1.0"
tempfile = "3"
walkdir = "2"
serde = "1"
serde_json = "1"
tar = "0.4"