# SPDX-FileCopyrightText: 2020-2021 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "fossology"
version = "0.1.0"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
thiserror = "1"
utilities = { path = "../utilities" }
log = "0.4"