[package]
name = "notice"
version = "0.1.0"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdx = { path = "../spdx" }
fossology = { path = "../fossology" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
log = "0.4"