# SPDX-FileCopyrightText: 2020-2021 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "utilities"
version = "0.1.0"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
walkdir = "2"
tempfile = "3"
hex = "0.4"